<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guide_h_02"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".02"
        />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guide_h_30"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".30"
/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_h_35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".35" />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/guide_h_28"
        app:layout_constraintGuide_percent=".28"
        />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/guide_h_40"
        app:layout_constraintGuide_percent=".40"
        />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/guide_v_20"
        app:layout_constraintGuide_percent=".20"
        />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/guide_h_44"
        app:layout_constraintGuide_percent=".44"
        />
    <androidx.constraintlayout.widget.Barrier
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/bar_v_cameraLens"
        app:barrierDirection="right"
        app:constraint_referenced_ids="tv_camera"
    />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/guide_h_47"
        app:layout_constraintGuide_percent=".47"
        />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".90"
        android:id="@+id/guide_h_90"
        />
    <ImageView
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:scaleType="centerCrop"
    android:id="@+id/ivSingapore"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/guide_h_02"
    app:layout_constraintBottom_toBottomOf="@id/guide_h_30"
    android:src="@drawable/singapore"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_singapur"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guide_h_30"
        android:textSize="30sp"
        android:text="@string/singapur_text"
        />
    <ImageView
        android:layout_width="60dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        android:src="@drawable/ic_stars"
        android:id="@+id/ic_star"
        app:layout_constraintTop_toBottomOf="@+id/guide_h_30"
        app:layout_constraintBottom_toBottomOf="@+id/guide_h_30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".9"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guide_h_35"
        android:text="@string/Camera"
        app:layout_constraintBottom_toTopOf="@+id/guide_h_40"
        android:textSize="20sp"
        />
<!--    <EditText-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:id="@+id/etcamera"-->
<!--        app:layout_constraintStart_toEndOf="@+id/guide_v_20"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/guide_h_40"-->
<!--    />-->
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tvcamera"
        app:layout_constraintStart_toEndOf="@+id/bar_v_cameraLens"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guide_h_40"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_lens"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guide_h_40"
        android:text="@string/Lens"
        app:layout_constraintBottom_toTopOf="@+id/guide_h_44"
        android:textSize="20sp"
        />
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/et_lens"
        app:layout_constraintStart_toEndOf="@+id/bar_v_cameraLens"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guide_h_44"
        />

       <ScrollView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toTopOf="@+id/guide_h_47"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lorem"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/guide_h_47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

       </ScrollView>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload"
        android:id="@+id/btnUpload"
        android:backgroundTint="#01199F"
        app:layout_constraintTop_toBottomOf="@+id/guide_h_90"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnScan"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Scan"
        android:id="@+id/btnScan"
        android:backgroundTint="#01199F"
        app:layout_constraintTop_toBottomOf="@+id/guide_h_90"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnUpload"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        />



</androidx.constraintlayout.widget.ConstraintLayout>